# mcp-bridge

./: .copier-answers.yml  Cargo.toml  act.toml  build.rs  justfile
.github/workflows/: ci.yml
e2e/: call_tool.hurl  call_tool_error.hurl  errors.hurl  hello.hurl  info.hurl  javadocs.hurl  list_tools.hurl  no_metadata.hurl  run.sh  tools.hurl  zip1.hurl
skill/: SKILL.md
src/: lib.rs  mapping.rs  mcp_client.rs
