[package]
name = "mcp-bridge"
description = "Proxies a remote MCP server's tools as ACT tools"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen = { version = "0.56", features = ["async-spawn"] }
wasi-fetch = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
ciborium = "0.2"
act-types = "0.3"

[build-dependencies]
ciborium = "0.2"
act-types = "0.3"
serde_json = "1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"

[lib]
crate-type = ["cdylib"]
