[package]
name = "mcp-bridge"
description = "Proxies a remote MCP server's tools as ACT tools"
version = "0.1.3"
edition = "2024"

[package.metadata.act.std.capabilities."wasi:http"]
description = "Proxies a remote MCP server; forwards JSON-RPC tool calls over HTTP."

[[package.metadata.act.std.capabilities."wasi:http".allow]]
host = "*"

[dependencies]
wit-bindgen = { version = "0.57", features = ["async-spawn"] }
wasi-fetch = "0.1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
act-types = "0.4"
base64 = "0.22"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"

[lib]
crate-type = ["cdylib"]
